# arm-ai-developer-challenge-2025

./: .gitignore  Architecture.md  LICENSE  README.md  intergated-system.py  main.py  ollama-vlm.py  pyproject.toml
backend/: .env.example  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/routes/: videos.py  websocket.py
backend/app/models/: schemas.py
backend/app/pipeline/: __init__.py  classifier.py  drift_detector.py  frame_selector.py  keyframe_sampler.py  motion_detector.py  retraining_recommender.py  vlm_verifier.py
backend/app/services/: video_processor.py  websocket_manager.py
backend/static/: index.html
classifier-models/train-fox-background/: results.csv
classifier-models/train-fox-deer-background/: args.yaml  results.csv
classifier-models/train-fox-hare-background/: args.yaml  results.csv
classifier-models/untrain-fox-background/: args.yaml
