[project]
name = "arm-ai-developer-challenge-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.123.5",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pydantic-settings>=2.12.0",
    "requests>=2.32.5",
    "ultralytics>=8.3.234",
    "uvicorn>=0.38.0",
]
